[package]
name = "extd"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["extact", "fetch"]
description = "Fetch and extract HTML's title and description by given link."
repository = "https://github.com/alexzhang1030/extd/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5"